core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@mut_string.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Mutable string references disallowed
In src/ast/snapshots/span_testing/mut_string.rs:3:30:
...&mut DiplomatStr) {}...
        ^^^^^^^^^^^
Suggestion: make reference immutable
